# AuthLM

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/audits/: v0.1.0-release-audit.md
.agents/plans/audit-6-fix/: README.md  nice-to-have.md  v0.1.0-release-blockers.md  v0.1.1-patch.md
.agents/rules/: general.md
.agents/skills/commit-conventions/: SKILL.md
.agents/skills/python-conventions/: SKILL.md
.agents/specs/: v0.1.0-authlm.md  v0.2.0-authlm.md  v0.3.0-authlm.md  v1.0.0-authlm.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  security.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/superpowers/plans/: 2026-07-23-nice-to-have-improvements.md
internal/authlm/: __init__.py  credentials.py
scripts/: README.md  refresh_models_dev.py
src/authlm/: __init__.py  _auth_table.py  _version.py  api.py  credentials.py  errors.py  hookspecs.py  metadata.py  models_dev.py  plugins.py  validation.py
src/authlm/_vendor/: models-dev-snapshot.json
src/authlm/cli/: __init__.py  _context.py  _formatters.py  connect.py  disconnect.py  doctor.py  env.py  list_cmd.py  status.py
src/authlm/connection_methods/: __init__.py  _oauth_helpers.py  api_key.py  oauth_device.py  oauth_pkce.py
src/authlm/providers/: anthropic.py  base.py  google.py  openai.py  openrouter.py  registry.py
src/authlm/stores/: __init__.py  base.py  encrypted_file_store.py  env_store.py  keyring_store.py  memory_store.py
tests/: conftest.py
tests/integration/: README.md
tests/security/: README.md
tests/unit/: test_api.py  test_api_key_method.py  test_auth_table.py  test_cli_connect.py  test_cli_context.py  test_cli_disconnect.py  test_cli_doctor.py  test_cli_env.py  test_cli_formatters.py  test_cli_list.py  test_cli_main.py  test_cli_status.py  test_credentials.py  test_encrypted_file_store.py  test_env_store.py  test_errors.py  test_hookspecs.py  test_keyring_store.py  test_memory_store.py  test_metadata.py  test_models_dev.py  test_oauth_device_method.py  test_oauth_helpers.py  test_oauth_pkce_method.py  test_plugins.py  test_plugins_default.py  test_providers_anthropic.py  test_providers_base.py  test_providers_google.py  test_providers_openai.py  test_providers_openrouter.py  test_providers_registry.py  test_smoke.py  test_store_base.py  test_store_selection.py  test_validation.py
