[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authlm"
dynamic = ["version"]
description = "Authentication and credential management for AI provider libraries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["llm", "ai", "authentication", "credentials", "oauth", "openai", "anthropic", "gemini", "byok", "keyring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "cryptography>=42",
    "httpx>=0.27",
    "keyring>=25",
    "packaging>=24",
    "platformdirs>=4",
    "pluggy>=1.5",
    "pydantic>=2.0",
    "pywin32>=307; sys_platform == 'win32'",
    "typing_extensions>=4.12",
]

[project.optional-dependencies]
openai = ["openai>=2.0"]
anthropic = ["anthropic>=0.113.0"]
google = ["google-genai>=1.0"]
all = ["authlm[openai,anthropic,google]"]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.33",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "syrupy>=5.3.4",
    "mypy>=1.10",
    "ruff>=0.6",
    "pip-audit>=2.7",
    "build>=1.2",
    "types-click",
]

[project.scripts]
authlm = "authlm.cli:cli"

[project.urls]
Homepage = "https://github.com/vihaan-g/authlm"
Documentation = "https://authlm.readthedocs.io"
Issues = "https://github.com/vihaan-g/authlm/issues"
Changelog = "https://github.com/vihaan-g/authlm/releases"
Source = "https://github.com/vihaan-g/authlm"

[tool.hatch.version]
source = "code"
path = "src/authlm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/authlm"]
include = ["src/authlm/_vendor/*.json"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["authlm"]

[tool.mypy]
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
